# py4hw

./: .gitignore  MANIFEST.in  README.md  requirements.txt  requires.txt  setup.cfg  setup.py
.github/workflows/: unit_tests.yml
docs/: Tutorial.html  UserGuide.html  index.html
docs/s00/: cloning.html  installing.html
docs/s01/: DesignStyle.html  HWSystem.html  Interfaces.html  Logic.html  OO.html  Parameters.html  Ports.html  abstract.html  wires.html
docs/s02/: bitmap.html  logic.html  relational.html
docs/s03/: memories.html  registers.html
docs/s04/: ClockEnable.html  FSMs.html  Process.html
docs/s05/: Scopes.html  Simulation.html  Waveforms.html
docs/s06/: Manipulation.html  Visualization.html  Workbench.html
docs/s07/: RTLGeneration.html  RTLTranspilation.html
docs/s08/: Structures.html
docs/s09/: Blocks.html
docs/s10/: Comparing.html  Visualization.html
docs/s11/: combinational.html  internals.html  sequential.html
docs/t01/: full_adder.html
docs/t02/: full_adder.html
py4hw/: __init__.py  base.py  code_generation.py  debug.py  gui.py  helper.py  logic.py  rtl_generation.py  schematic.py  schematic_symbols.py  simulation.py  storage.py
test/: allTests.py
tests/: Test_Add.py  Test_And.py  Test_Equal.py  Test_Minterm.py  Test_RtlGeneration.py  tb_Add.py  tb_AddInc+LEQ.py  tb_And.py  tb_Bits.py  tb_GuiHierarchy.py  tb_Minterm.py  tb_Mul.py  tb_Reg.py  tb_RegSR.py  tb_Schematic.py  tb_SerialAdd.py  tb_Sign.py  tb_Waveform.ipynb  tb_Xor.py
tutorial/: README.md  Tutorial.ipynb  UserGuide.ipynb  generate_html.py  requirements.txt
(+184 files in other folders)
