[tool:pytest]
python_files = py4hw/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*, riscv/*
ignore = E501,W504,W503
per-file-ignores =
    **/__init__.py:F401
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
profile=black
forced_separate=py4hw
multi_line_output=3
skip=__init__.py