[tool:pytest]
python_files = test/unit/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    
[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503
per-file-ignores =
    **/__init__.py:F401
    
[metadata]
description-file = README.md

[aliases]
test=pytest

[isort]
profile=black
forced_separate=py4hw
multi_line_output=3
skip=__init__.py

[options.package_data]
py4hw = *.png